Add Redux, redux toolkit state managment. Works fine.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "gh-pages": "^5.0.0",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "tachyons": "^4.12.0"
   },
   "scripts": {
